
plugins {
  id 'java'
  id 'application'
}

sourceCompatibility = 11
targetCompatibility = 11

// tag::repositories[]
repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}
// end::repositories[]

// tag::dependencies[]
dependencies {
  testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
}
// end::dependencies[]

task fortifyScan(type: JavaExec)  {
  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
